WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125955
PDFPlugin: Never make a NSEventType = 0
https://bugs.webkit.org/show_bug.cgi?id=125955
Summary
PDFPlugin: Never make a NSEventType = 0
Tim Horton
Reported
2013-12-18 15:14:48 PST
It's a nonsensical value for NSEventType. We should inform callers of eventTypeFromWebEvent that the conversion failed in a out-of-band manner. <
rdar://problem/15691339
>
Attachments
patch
(4.43 KB, patch)
2013-12-18 15:19 PST
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-12-18 15:19:01 PST
Created
attachment 219577
[details]
patch
Tim Horton
Comment 2
2013-12-18 15:22:51 PST
http://trac.webkit.org/changeset/160801
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug