PDFPlugin: Never make a NSEventType = 0 https://bugs.webkit.org/show_bug.cgi?id=125955

Reviewed by Dan Bernstein.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::getEventTypeFromWebEvent):
Make getEventTypeFromWebEvent return its NSEventType as an out arg, and
make the return value represent whether or not we set it.

(WebKit::PDFPlugin::nsEventForWebMouseEvent):
(WebKit::PDFPlugin::handleKeyboardEvent):
Make use of getEventTypeFromWebEvent.


Canonical link: https://commits.webkit.org/143948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160801 268f45cc-cd09-0410-ab3c-d52691b4dbfc